--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.7",
     "next": "14.1.2",
     "react": "^18",
+    "react-countup": "^6.5.0",
     "react-dom": "^18"
   },
   "devDependencies": {
