--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.15.12",
     "axios": "^1.6.7",
     "next": "14.1.2",
+    "nextjs-progressbar": "^0.0.16",
     "react": "^18",
     "react-countup": "^6.5.0",
     "react-dom": "^18"
